Fix: Handle additional pictures and improve .gitignore
